--- a/desktop.css
+++ b/desktop.css
@@ -9,6 +9,19 @@ background-position: center center;
 background-repeat: no-repeat;
 background-attachment: fixed;
 }
+
+video {
+  object-fit: cover;
+  width: 100vw;
+  height: 100vh;
+  position:absolute;
+  top: 0;
+  left: 0;
+  z-index: -5;
+}
+.mask {
+  -webkit-mask-image: linear-gradient(to top, transparent 5%, black 95%);
+}
 @media only screen and (max-width: 320px) {
 
    body {
