--- a/mobile.css
+++ b/mobile.css
@@ -17,7 +17,18 @@ background-attachment: fixed;
    }
 
 }
-
+video {
+  object-fit: cover;
+  width: 215vw;
+  height: 100%;
+  position:absolute;
+  top: 0;
+  left: 0;
+  z-index: -5;
+}
+.mask {
+  -webkit-mask-image: linear-gradient(to top, transparent 5%, black 95%);
+}
 .middle-container {
   margin: 0;
 }
@@ -296,7 +307,7 @@ box-shadow: 0px 0px 58px -29px rgba(255,255,255,0.3);
 }
 
 .video-gallery .gallery-item .gallery-item-caption {
-  padding: 2em;
+  padding: 1em;
   color: #fff;
   text-transform: uppercase;
   font-size: 1.25em;
@@ -328,7 +339,7 @@ box-shadow: 0px 0px 58px -29px rgba(255,255,255,0.3);
 
 .video-gallery .gallery-item p {
   letter-spacing: 1px;
-  font-size: 68%;
+  font-size: 45%;
   padding: 1em 0;
   opacity: 0;
   transition: opacity 0.35s, transform 0.35s;
