--- a/desktop.css
+++ b/desktop.css
@@ -22,12 +22,93 @@ video {
 .mask {
   -webkit-mask-image: linear-gradient(to top, transparent 5%, black 95%);
 }
+.ribbon {
+  position:absolute;
+  width: 11em;
+  height: 5.5em;
+  z-index: 9999;
+  top: 15%;
+  right: 2%;
+  background: #2ec4b6;
+  padding: 5px 0;
+  margin: top 10%;
+  z-index: 10;
+  background-image: radial-gradient(circle farthest-side at top, #FFF3EB 0%, #F54039 85%);
+  -webkit-box-shadow: -5px 21px 28px -4px rgba(0, 0, 0, 0.43);
+  -moz-box-shadow: -5px 21px 28px -4px rgba(0, 0, 0, 0.43);
+  box-shadow: -5px 21px 28px -4px rgba(0, 0, 0, 0.43);
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  border-radius: 8px;
+}
+.ribbon:hover{
+  transform:scale(1.05);
+}
+.ribbon-content {
+  z-index: 100;
+  position: relative;
+  margin: 0 5px;
+  font-family: 'Secular One', sans-serif;
+  color: #f5f5f5;
+  text-shadow: 0px 0px 0 rgb(241,241,241),
+                   0px 1px 0 rgb(227,227,227),
+                   0px 2px 0 rgb(172,172,172),
+                   0px 3px 0 rgb(158,158,158),
+                   0px 4px  0 rgb(144,144,144),
+                   0px 5px 5px rgba(0,0,0,0.92),
+                   0px 5px 1px rgba(0,0,0,0.5),
+                   0px 0px 5px rgba(0,0,0,.2);
+}
+.ribbon-content h2 {
+  text-align: center;
+  font-size: 3.3em;
+}
+.ribbon-content h3 {
+  margin: 0;
+  padding: 5px 0 5px 0;
+  line-height: 16px;
+  text-align: center;
+
+}
+
+.ribbon-content > p,
+.ribbon-content > p span {
+  color: #24505a;
+  margin: 0;
+  padding: 0;
+}
+
+.ribbon-content p span {
+  display: block;
+}
+.ribbon:before {
+  content: "";
+  position: absolute;
+  bottom: -5em;
+  left: 0;
+  width: 0;
+  height: 0;
+  border-top: 6em solid #F54039;
+  border-right: 8em solid transparent;
+  z-index: 9;
+}
+
+.ribbon:after {
+  content: "";
+  position: absolute;
+  bottom: -5em;
+  right: 0;
+  width: 0;
+  height: 0;
+  border-top: 6em solid #F54039;
+  border-left: 8em solid transparent;
+  z-index: 9;
+}
 @media only screen and (max-width: 320px) {
 
    body {
       font-size: 2em;
    }
-
 }
 @media only screen and (min-width: 760px)
 .middle-container-fluid {
