--- a/mobile.css
+++ b/mobile.css
@@ -29,6 +29,89 @@ video {
 .mask {
   -webkit-mask-image: linear-gradient(to top, transparent 5%, black 95%);
 }
+.ribbon {
+  position:relative;
+  float: left;
+  width: 11em;
+  height: 5.5em;
+  transform: scale(0.4);
+  top: 0%;
+  margin: top 15%;
+  background: #2ec4b6;
+  margin: top 10%;
+  z-index: 10;
+  background-image: radial-gradient(circle farthest-side at top, #FFF3EB 0%, #F54039 85%);
+  -webkit-box-shadow: -5px 21px 28px -4px rgba(0, 0, 0, 0.43);
+  -moz-box-shadow: -5px 21px 28px -4px rgba(0, 0, 0, 0.43);
+  box-shadow: -5px 21px 28px -4px rgba(0, 0, 0, 0.43);
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  border-radius: 8px;
+}
+.ribbon:hover{
+  transform:scale(0.43);
+}
+.ribbon-content {
+  z-index: 100;
+  position: relative;
+  margin: 0 5px;
+  font-family: 'Secular One', sans-serif;
+  color: #f5f5f5;
+  text-shadow: 0px 0px 0 rgb(241,241,241),
+                   0px 1px 0 rgb(227,227,227),
+                   0px 2px 0 rgb(172,172,172),
+                   0px 3px 0 rgb(158,158,158),
+                   0px 4px  0 rgb(144,144,144),
+                   0px 5px 5px rgba(0,0,0,0.92),
+                   0px 5px 1px rgba(0,0,0,0.5),
+                   0px 0px 5px rgba(0,0,0,.2);
+}
+.ribbon-content h2 {
+  text-align: center;
+  font-size: 3.3em;
+}
+.ribbon-content h3 {
+    font-size: 1.5em;
+  margin: 0;
+  padding: 20px 0 5px 0;
+  line-height: 16px;
+  text-align: center;
+
+}
+
+.ribbon-content > p,
+.ribbon-content > p span {
+  color: #24505a;
+  margin: 0;
+  padding: 0;
+}
+
+.ribbon-content p span {
+  display: block;
+}
+.ribbon:before {
+  content: "";
+  position: absolute;
+  bottom: -5em;
+  left: 0;
+  width: 0;
+  height: 0;
+  border-top: 6em solid #F54039;
+  border-right: 8em solid transparent;
+  z-index: 9;
+}
+
+.ribbon:after {
+  content: "";
+  position: absolute;
+  bottom: -5em;
+  right: 0;
+  width: 0;
+  height: 0;
+  border-top: 6em solid #F54039;
+  border-left: 8em solid transparent;
+  z-index: 9;
+}
 .middle-container {
   margin: 0;
 }
@@ -44,13 +127,13 @@ align-content: center ;
   background-color: white;
 }
 #logo{
-  margin-left: 65px;
+  margin-right: 55px;
 }
 .hero{
   text-align: center;
-  font-size: 65px;
+  font-size: 40px;
   letter-spacing: +.2em;
-  line-height: 1.2em;
+  line-height: 1.1em;
   text-transform: uppercase;
   font-family: verdana;
   font-weight: 700;
@@ -145,12 +228,12 @@ align-content: center ;
 }
 
 .box{
-    width: 1000px;
+    width: 85%;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
-    grid-gap: 15px;
+    grid-gap: 20px;
     margin: 0 auto;
-    margin-top: 30px;
+    margin-top: 5px;
   }
   .card{
     position: relative;
@@ -275,7 +358,7 @@ align-content: center ;
 }
 .video-gallery {
   margin: auto;
-  max-width: 100%;
+  max-width: 70%;
 }
 .video-gallery .gallery-item {
   border-radius: 107px 107px 107px 107px;
@@ -285,8 +368,7 @@ border: 4px solid rgba(255,255,255,0.8);
 box-shadow: 0px 0px 58px -29px rgba(255,255,255,0.3);
   position: relative;
   float: left;
-  display: block;
-  margin: 1%;
+  margin: 1px;
   top: 0;
   overflow: hidden;
   min-width: 120px;
@@ -516,7 +598,7 @@ a:focus,
 
 .add-padding {
     padding-top:40px;
-    padding-bottom:185px;
+    padding-bottom:40px;
 }
 
 
@@ -620,15 +702,6 @@ a:focus,
 .popup .content {
  max-height: 30%;
  overflow: auto;
-}
-
-@media screen and (max-width: 700px){
- .box{
-   width: 70%;
- }
- .popup{
-   width: 70%;
- }
 }
 /* Popup mini  */
 .popup-mini {
