--- a/desktop.css
+++ b/desktop.css
@@ -21,6 +21,17 @@ video {
 }
 .mask {
   -webkit-mask-image: linear-gradient(to top, transparent 5%, black 95%);
+  width: 100%;
+}
+.fa-waze{
+  color: white;
+  text-align: center;
+  margin-left: 50%;
+  transform: scale(4);
+  transition-duration: 0.2s;
+}
+.fa-waze:hover{
+    transform: rotateZ(-15deg) scale(4.2);
 }
 .ribbon {
   position:absolute;
@@ -40,6 +51,7 @@ video {
   -webkit-border-radius: 8px;
   -moz-border-radius: 8px;
   border-radius: 8px;
+  transition-duration: 0.25s;
 }
 .ribbon:hover{
   transform:scale(1.05);
@@ -154,6 +166,9 @@ align-content: center ;
                    0px 8px 1px rgba(0,0,0,0.5),
                    0px 0px 7px rgba(0,0,0,.2);
 }
+.navbar{
+    -webkit-box-shadow: 0 12px 20px -12px rgba(0, 0, 0, 0.35);
+}
 .nav-item:hover{
   opacity: 0.7;
 }
@@ -163,7 +178,7 @@ align-content: center ;
   max-height: 600px;
 }
 .mapStyle{
-  margin-top: 2%;
+  margin-top: 1%;
   text-align: center;
   font-size: 75px;
   letter-spacing: +.2em;
