--- a/mobile.css
+++ b/mobile.css
@@ -61,6 +61,7 @@ video {
 }
 .ribbon:hover{
   transform:scale(0.43);
+  height: 9.5em;
 }
 .ribbon-content {
   z-index: 100;
@@ -76,6 +77,15 @@ video {
                    0px 5px 5px rgba(0,0,0,0.92),
                    0px 5px 1px rgba(0,0,0,0.5),
                    0px 0px 5px rgba(0,0,0,.2);
+}
+.ribbon-content .form-inline{
+  margin-left: 25%;
+    text-shadow: 0px 0px 0 black;
+    opacity: 0;
+    transition-duration: 0.5s;
+}
+.ribbon:hover .form-inline{
+  opacity: 1;
 }
 .ribbon-content h2 {
   text-align: center;
@@ -247,7 +257,6 @@ align-content: center ;
     grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
     grid-gap: 20px;
     margin: 0 auto;
-    margin-top: 5px;
   }
   .card{
     position: relative;
