--- a/mobile.css
+++ b/mobile.css
@@ -13,15 +13,16 @@ background-attachment: fixed;
 @media only screen and (max-width: 600px) {
 
    body {
-       width: 775px;
+       width: 100%;
       font-size: 2em;
    }
 
 }
 video {
   object-fit: cover;
-  width: 215vw;
-  height: 100%;
+  min-width: 100%;
+    min-height: 100%;
+    max-width: 100vw;
   position:absolute;
   top: 0;
   left: 0;
@@ -61,7 +62,7 @@ video {
     transition-duration: 0.25s;
 }
 .ribbon:hover{
-  transform:scale(0.43);
+  transform:scale(0.42);
   height: 9.5em;
 }
 .ribbon-content {
@@ -174,6 +175,7 @@ align-content: center ;
 }
 .navbar{
     -webkit-box-shadow: 0 12px 20px -12px rgba(0, 0, 0, 0.35);
+        width: 100%;
 }
 .nav-item:hover{
   opacity: 0.7;
@@ -395,13 +397,15 @@ box-shadow: 0px 0px 58px -29px rgba(255,255,255,0.3);
   margin: 1px;
   top: 0;
   overflow: hidden;
+  width: 80vw;
   min-width: 120px;
-  max-width: 480px;
+  max-width: 700px;
   max-height: 220px;
   background: #000;
   cursor: pointer;
 }
 .video-gallery .gallery-item img {
+    object-fit: cover;
   position: relative;
   display: block;
   opacity: .85;
