--- a/mobile.css
+++ b/mobile.css
@@ -29,7 +29,7 @@ video {
   z-index: -5;
 }
 .mask {
-  -webkit-mask-image: linear-gradient(to top, transparent 5%, black 95%);
+  -webkit-mask-image: linear-gradient(to top, transparent 50%, black 95%);
 }
 .fa-waze{
   color: white;
@@ -45,7 +45,7 @@ video {
   position:relative;
   float: left;
   width: 11em;
-  height: 5.5em;
+  height: 8.5em;
   transform: scale(0.4);
   top: 0%;
   margin: top 15%;
@@ -63,7 +63,6 @@ video {
 }
 .ribbon:hover{
   transform:scale(0.42);
-  height: 9.5em;
 }
 .ribbon-content {
   z-index: 100;
@@ -83,20 +82,17 @@ video {
 .ribbon-content .form-inline{
   margin-left: 25%;
     text-shadow: 0px 0px 0 black;
-    opacity: 0;
+    opacity: 1;
     transition-duration: 0.5s;
-}
-.ribbon:hover .form-inline{
-  opacity: 1;
 }
 .ribbon-content h2 {
   text-align: center;
-  font-size: 3.3em;
+  font-size: 3.1em;
 }
 .ribbon-content h3 {
     font-size: 1.5em;
   margin: 0;
-  padding: 20px 0 5px 0;
+  padding: 40px 0 5px 0;
   line-height: 16px;
   text-align: center;
 
@@ -150,12 +146,12 @@ align-content: center ;
   background-color: white;
 }
 #logo{
-  margin-right: 55px;
+  margin-right: 20px;
 }
 .hero{
   text-align: center;
-  font-size: 40px;
-  letter-spacing: +.2em;
+    font-size: 10vw;
+  letter-spacing: +.1em;
   line-height: 1.1em;
   text-transform: uppercase;
   font-family: verdana;
@@ -263,8 +259,8 @@ align-content: center ;
   }
   .card{
     position: relative;
-    width: 160px;
-    height: 200px;
+    width: 260px;
+    height: 300px;
     background: #fff;
     margin: 0 auto;
     margin-bottom: 10%;
@@ -808,7 +804,25 @@ a:focus,
    border: 2px solid  black;
    box-shadow: 0px 0px 58px -29px rgba(255,255,255,0.3);
 }
-
+.hbtn-white {
+      position: relative;
+      box-sizing: border-box;
+      display: inline-block;
+      overflow: hidden;
+      padding: 8px 20px;
+      margin: 0px 3px 6px;
+      text-align: center;
+      text-decoration: none;
+      color: black;
+      white-space: nowrap;
+      z-index: 0;
+      border-radius: 107px 107px 107px 107px;
+    -moz-border-radius: 107px 107px 107px 107px;
+    -webkit-border-radius: 107px 107px 107px 107px;
+    border: 2px solid  white;
+    background: white;
+    box-shadow: 0px 0px 58px -29px rgba(255,255,255,0.3);
+}
 
 .hbtn i {
      padding-right: 8px;
