--- a/desktop.css
+++ b/desktop.css
@@ -26,6 +26,29 @@ video {
   -webkit-mask-image: linear-gradient(to top, transparent 5%, black 95%);
   width: 100%;
 }
+h2{
+  font-family: 'Secular One', sans-serif;
+  font-weight: 600;
+  color: #f5f5f5;
+  text-align: center;
+  font-size: 3.5vw;
+}
+h3{
+  font-family: 'Secular One', sans-serif;
+  font-weight: 300;
+  color: #f5f5f5;
+  text-align: center;
+  font-size: 1.5vw;
+    width: 75%;
+    margin: auto;
+}
+.jumbotron h2{
+  font-family: 'Secular One', sans-serif;
+  font-weight: 300;
+  color: black;
+  text-align: center;
+  font-size: 50px;
+}
 .fa-waze{
   color: white;
   text-align: center;
@@ -80,10 +103,10 @@ video {
 }
 .ribbon-content h2 {
   text-align: center;
-  font-size: 3.1em;
+  font-size: 3.0em;
 }
 .ribbon-content h3 {
-  margin: 0;
+  font-size: 1.5em;
   padding: 1px 0 3px 0;
   line-height: 16px;
   text-align: center;
@@ -415,23 +438,24 @@ box-shadow: 0px 0px 58px -29px rgba(255,255,255,0.3);
   padding: 2em;
   color: #fff;
   text-transform: uppercase;
-  font-size: 1.25em;
+  font-size: 1.1em;
 }
 
 .video-gallery .gallery-item .gallery-item-caption,
 .video-gallery .gallery-item .gallery-item-caption > a {
   position: absolute;
   top: 0;
-  left: 0;
+  left: 20;
   width: 100%;
   height: 100%;
 }
 
 .video-gallery .gallery-item h2 {
-  font-weight: 400;
+  font-weight: 100;
   overflow: hidden;
-  padding: 0.5em 0;
-  text-shadow: 0px 0px 6px rgba(0,0,0,0.8);
+  text-align: center;
+  padding: 0.2em 0;
+  text-shadow: 0px 0px 7px rgba(0,0,0,0.8);
 }
 
 
@@ -444,7 +468,7 @@ box-shadow: 0px 0px 58px -29px rgba(255,255,255,0.3);
 
 .video-gallery .gallery-item p {
   letter-spacing: 1px;
-  font-size: 68%;
+  font-size: 85%;
   padding: 1em 0;
   opacity: 0;
   transition: opacity 0.35s, transform 0.35s;
@@ -458,25 +482,9 @@ box-shadow: 0px 0px 58px -29px rgba(255,255,255,0.3);
 }
 
 .video-gallery .gallery-item .gallery-item-caption {
-  text-align: right;
+  text-align: center;
 }
 
-.video-gallery .gallery-item h2::after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  width: 25%;
-  height: 1px;
-  background: #fff;
-
-  transition: transform 0.3s;
-  transform: translate3d(100%, 0, 0);
-}
-
-.video-gallery .gallery-item:hover h2::after {
-  transform: translate3d(0, 0, 0);
-}
 
 .video-gallery .gallery-item:hover p {
   opacity: 1;
