--- a/mobile.css
+++ b/mobile.css
@@ -31,6 +31,22 @@ video {
 .mask {
   -webkit-mask-image: linear-gradient(to top, transparent 50%, black 95%);
 }
+h2{
+  font-family: 'Secular One', sans-serif;
+  font-weight: 600;
+  color: #f5f5f5;
+  text-align: center;
+  font-size: 11.5vw;
+}
+h3{
+  font-family: 'Secular One', sans-serif;
+  font-weight: 300;
+  color: #f5f5f5;
+  text-align: center;
+  font-size: 6.5vw;
+    width: 75%;
+    margin: auto;
+}
 .fa-waze{
   color: white;
   text-align: center;
@@ -91,13 +107,18 @@ video {
 }
 .ribbon-content h3 {
     font-size: 1.5em;
-  margin: 0;
   padding: 40px 0 5px 0;
   line-height: 16px;
   text-align: center;
 
 }
-
+.jumbotron h2{
+  font-family: 'Secular One', sans-serif;
+  font-weight: 300;
+  color: black;
+  text-align: center;
+  font-size: 30px;
+}
 .ribbon-content > p,
 .ribbon-content > p span {
   color: #24505a;
@@ -431,8 +452,8 @@ box-shadow: 0px 0px 58px -29px rgba(255,255,255,0.3);
 .video-gallery .gallery-item h2 {
   font-weight: 400;
   overflow: hidden;
-  padding: 0.5em 0;
-  text-shadow: 0px 0px 6px rgba(0,0,0,0.8);
+  padding: 0.2em 0;
+  text-shadow: 0px 0px 7px rgba(0,0,0,0.8);
 }
 
 
@@ -446,7 +467,7 @@ box-shadow: 0px 0px 58px -29px rgba(255,255,255,0.3);
 .video-gallery .gallery-item p {
   letter-spacing: 1px;
   font-size: 45%;
-  padding: 1em 0;
+  padding: 0.05em 0;
   opacity: 0;
   transition: opacity 0.35s, transform 0.35s;
   transform: translate3d(10%, 0, 0);
@@ -460,23 +481,6 @@ box-shadow: 0px 0px 58px -29px rgba(255,255,255,0.3);
 
 .video-gallery .gallery-item .gallery-item-caption {
   text-align: right;
-}
-
-.video-gallery .gallery-item h2::after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  width: 25%;
-  height: 1px;
-  background: #fff;
-
-  transition: transform 0.3s;
-  transform: translate3d(100%, 0, 0);
-}
-
-.video-gallery .gallery-item:hover h2::after {
-  transform: translate3d(0, 0, 0);
 }
 
 .video-gallery .gallery-item:hover p {
